# unifi-access-pms

./: .env.example  .gitignore  LICENSE  README.md  config_loader.py  pyproject.toml  requirements.minimal.txt  requirements.txt  run_sync_with_notifications.py
docs/: README.md
examples/: config.sample.yaml
src/unifi_access_pms/: __init__.py  cli.py
src/unifi_access_pms/config/: manager.py  models.py
src/unifi_access_pms/core/: __init__.py  interfaces.py  models.py  registry.py
src/unifi_access_pms/integrations/: __init__.py  unifi_access.py
src/unifi_access_pms/notifications/: __init__.py  manager.py  matrix.py  simplepush.py
src/unifi_access_pms/providers/: __init__.py  hospitable.py
tests/: __init__.py  test_core.py
